welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:7: error: ')' expected but '=' found.
	if  ((a+b-b-c)=10)
                      ^blueTicket:11: error: illegal start of simple expression
}
^